empezado a completar requerimientos

--- a/charter.tex
+++ b/charter.tex
@@ -212,6 +212,43 @@ Para el desarrollo del presente proyecto se supone que:
 \section{6. Requerimientos}
 \label{sec:requerimientos}
 
+Los requerimientos del proyecto se definieron luego de acordarlos con el cliente y considerando las sugerencias de los posibles usuarios finales. Estos se detallan a continuación, agrupados por subsistemas y en orden de prioridad decreciente.
+
+\begin{enumerate}
+	\item Requerimientos generales
+		\begin{enumerate}
+			\item Fecha de entrega del proyecto terminado:
+			\item El dispositivo debe poder conectarse a la red doméstica de 110V/60Hz.
+			\item Todos los componentes del dispositivo, a excepción de la fuente de alimentación, deben estar montados sobre una carcasa de material no conductor
+			\item El dispositivo no debe pesar mas de X kg y no debe tener mas de X cm de largo, X cm de ancho y X cm de alto.
+		\end{enumerate}
+	\item Requerimientos funcionales
+		\begin{enumerate}
+			\item Requerimientos de hardware
+				\begin{enumerate}
+					\item Todas las señales eléctricas entrantes y salientes del EDFA deben estar aisladas y protegidas contra descargas electrostáticas.
+					\item El dispositivo debe poder medir el consumo de corriente del EDFA con una precisión del X\%.
+					\item El dispositivo debe conectarse al EDFA mediante un cable con conectores Micro-D.
+				\end{enumerate}
+			\item Requerimientos de firmware
+				\begin{enumerate}
+					\item El dispositivo debe actualizar la información mostrada en la pantalla al menos cada 0.5 segundos.
+				\end{enumerate}
+		\end{enumerate}
+	\item Requerimientos no funcionales
+		\begin{enumerate}
+			\item Se deberá generar la documenatación correspondiente.
+			\item El dispositivo no debe generar ni emanar ningún tipo de partículas o residuo.
+			\item El dispositivo debe ser apto para su uso en una sala limpia.
+			\item El dispositivo no debe generar altas temperaturas.
+			\item El dispositivo no debe emitir EMI.
+		\end{enumerate}
+	\item Requerimientos de testing
+		%\begin{enumerate}
+
+		%\end{enumerate}
+\end{enumerate}
+
 \begin{consigna}{red}
 Los requerimientos deben numerarse y de ser posible estar agruparlos por afinidad, por ejemplo:
 
